<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleTweet</string>
    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>
    <string name="compose">Compose</string>
    <string name="loading">Loading...</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="tagline">TagLine</string>
    <string name="_5_followers">5 Followers</string>
    <string name="_5_following">5 Following</string>

</resources>