<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/miCompose"
        android:icon="@drawable/ic_vector_compose"
        android:onClick="onCompose"
        android:title="@string/compose"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/miActionProgress"
        android:orderInCategory="100"
        android:title="@string/loading"
        android:visible="false"
        app:actionLayout="@layout/action_view_progress"
        app:showAsAction="always" />
    <item
        android:id="@+id/miProfile"
        android:icon="@drawable/ic_vector_person"
        android:title="@string/profile"
        android:onClick="onProfileView"
        app:showAsAction="always" />
</menu>